crates/ink/tests/ui/contract/fail/impl/impl-block-using-env-no-marker.stderr
error[E0599]: no method named `env` found for reference `&Contract` in the current scope
  --> tests/ui/contract/fail/impl/impl-block-using-env-no-marker.rs:24:26
   |
24 |             let _ = self.env().caller();
   |                          ^^^ method not found in `&Contract`
   |
   = help: items from traits can only be used if the trait is in scope
help: trait `Env` which provides `env` is implemented but not in scope; perhaps you want to import it
   |
3  + use ink::codegen::Env;
   |
